force-app/main/default/objects/Price_Audit_Backbone_AMV__c/Price_Audit_Backbone_AMV__c.object-meta.xml
<CustomObject>
    <label>Price Audit-Backbone AMV</label>
    <nameField>
        <displayFormat>BAADT-{0000000}</displayFormat>
        <label>Backbone AMV Audit Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Audit-Backbone AMV</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>