force-app/main/default/objects/Price_Audit_Backbone_AMV__c/fields/Bio_Split__c.field-meta.xml
<CustomField>
    <fullName>Bio_Split__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bio Split</label>
    <type>Checkbox</type>
</CustomField>