force-app/main/default/objects/Price_Audit_Backbone_AMV__c/fields/CO_Steer__c.field-meta.xml
<CustomField>
    <fullName>CO_Steer__c</fullName>
    <label>CO Steer(Euro/Mt)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>