force-app/main/default/objects/Price_Audit_Backbone_AMV__c/fields/Depot_Steer_Euro_Mt__c.field-meta.xml
<CustomField>
    <fullName>Depot_Steer_Euro_Mt__c</fullName>
    <formula>Price_Audit__r.Depot_Steer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Depot Steer(Euro/Mt)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>