force-app/main/default/objects/Price_Audit_Backbone_AMV__c/fields/FreightToSource__c.field-meta.xml
<CustomField>
    <fullName>FreightToSource__c</fullName>
    <label>FreightToSource(Euro/Mt)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>