force-app/main/default/objects/Price_Audit_Backbone_AMV__c/fields/Landed_BAMV__c.field-meta.xml
<CustomField>
    <fullName>Landed_BAMV__c</fullName>
    <label>Landed BAMV(€/Mt)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>