force-app/main/default/objects/Price_Audit_Backbone_AMV__c/fields/MOT__c.field-meta.xml
<CustomField>
    <fullName>MOT__c</fullName>
    <label>Mode Of Transport(MOT)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>