force-app/main/default/objects/Price_Audit_Backbone_AMV__c/fields/Mrc_No__c.field-meta.xml
<CustomField>
    <fullName>Mrc_No__c</fullName>
    <label>Mrc Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>