force-app/main/default/objects/Price_Audit_Backbone_AMV__c/fields/Netback__c.field-meta.xml
<CustomField>
    <fullName>Netback__c</fullName>
    <formula>(Netback_Unit_Margin__c / Price_Audit__r.Density__c *10) + CO_Steer__c + Depot_Steer_Euro_Mt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Netback</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>