force-app/main/default/objects/Price_Audit_Backbone_AMV__c/fields/Netback_BSP__c.field-meta.xml
<CustomField>
    <fullName>Netback_BSP__c</fullName>
    <formula>(((Landed_BAMV__c + Depot_Steer_Euro_Mt__c )/10)* Price_Audit__r.Density__c )+ Price_Audit__r.Throughput_Cost__c + Price_Audit__r.Energy_Fees__c + Price_Audit__r.Union_Fees__c + Price_Audit__r.CSO__c +  Price_Audit__r.CO2_Euro_100L__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Netback BSP</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>