force-app/main/default/objects/Price_Audit_Backbone_AMV__c/fields/Netback_Check__c.field-meta.xml
<CustomField>
    <fullName>Netback_Check__c</fullName>
    <formula>IF(OR(Price_Audit__r.SHT__r.Effective_Margin__c &lt; -1,Price_Audit__r.SHT__r.Effective_Margin__c &gt;=6 ),false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Netback Check</label>
    <type>Checkbox</type>
</CustomField>