force-app/main/default/objects/Price_Audit_Backbone_AMV__c/fields/Netback_Unit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Netback_Unit_Margin__c</fullName>
    <formula>IF( Netback_BSP__c = 0, 0,(Price_Audit__r.SP_100L__c - Netback_BSP__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Netback Unit Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>