force-app/main/default/objects/Price_Audit_Backbone_AMV__c/fields/Price_Audit__c.field-meta.xml
<CustomField>
    <fullName>Price_Audit__c</fullName>
    <label>Price Audit</label>
    <referenceTo>Price_Audit_BSP__c</referenceTo>
    <relationshipName>Backbone_AMV_Audits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>