force-app/main/default/objects/Price_Audit_Backbone_AMV__c/fields/Route_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Route_Utilization__c</fullName>
    <label>Route Utilization%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>