force-app/main/default/objects/Price_Audit_Backbone_AMV__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Price Audit-Backbone AMV</relationshipLabel>
    <relationshipName>Price_Audit_Backbone_AMV</relationshipName>
    <type>Lookup</type>
</CustomField>