force-app/main/default/objects/Price_Audit_Backbone_AMV__c/fields/Total_Netback__c.field-meta.xml
<CustomField>
    <fullName>Total_Netback__c</fullName>
    <formula>if(Netback__c &lt;&gt; 0,Netback__c *  Volume_CBM__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Netback</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>