force-app/main/default/objects/Price_Audit_Backbone_AMV__c/fields/Volume_CBM__c.field-meta.xml
<CustomField>
    <fullName>Volume_CBM__c</fullName>
    <formula>Price_Audit__r.Volume_CBM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volume CBM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>