force-app/main/default/objects/Price_Audit_Backbone_AMV__c/fields/Wasa__c.field-meta.xml
<CustomField>
    <fullName>Wasa__c</fullName>
    <label>Wasa(Euro/Mt)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>