force-app/main/default/objects/Price_Audit_Backbone_AMV__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mrc_No__c</columns>
    <columns>Price_Audit__c</columns>
    <columns>Additive_Cost__c</columns>
    <columns>Bio_Cost__c</columns>
    <columns>Bio_Split__c</columns>
    <columns>CO_Steer__c</columns>
    <columns>Final_BAMV_Value__c</columns>
    <columns>Freight_Percentage__c</columns>
    <columns>Freight__c</columns>
    <columns>HCV__c</columns>
    <columns>Route_Name__c</columns>
    <columns>Third_Party__c</columns>
    <columns>Wasa__c</columns>
    <columns>Route_Utilization__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>