force-app/main/default/objects/Price_Audit_Backbone_AMV__c/listViews/Copy_of_All_som.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_som</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Price_Audit__c</columns>
    <columns>NAME</columns>
    <columns>HCV__c</columns>
    <columns>MOT__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Mrc_No__c</field>
        <operation>equals</operation>
        <value>MRCXXD050-000243</value>
    </filters>
    <label>Copy of All (som)</label>
</ListView>